# abc126

./: CMakeLists.txt  README.md  shell.nix
.wg/: README.md  absMove.h  getAbsPos.h  getKeyState.h  keyboard.h  keycodes.h  lib.h  main  main.c  relative_move.h  structures.h  test  test.c
docs/: USAGE.md
include/winrun/: loader.h  pe.h
scripts/: install-archlinux.sh  install.sh
src/: import_resolver.c  main.c  memory_mapper.c  pe_parser.c  relocations.c  runtime.c  signals.c
